@@ -1,9 +1,9 @@
 /*******************************************************************************
  * Copyright (c) 2017 Sebastien Caille.
  *  All rights reserved.
- * 
+ *
  *  Redistribution and use in source and binary forms are permitted
- *  provided that the above copyright notice and this paragraph are
+ *  provided that the above Copyrightnotice and this paragraph are
  *  duplicated in all such forms and that any documentation,
  *  advertising materials, and other materials related to such
  *  distribution and use acknowledge that the software was developed
@@ -23,7 +23,7 @@ public class TestObjectTableModel extends ListModelTableModel<TestObject, Column
 
 	private static final long serialVersionUID = 5035556443525716721L;
 
-	public static enum Columns {
+	public enum Columns {
 		A_FIRST_VALUE, A_SECOND_VALUE
 	}
 
@@ -42,7 +42,7 @@ public class TestObjectTableModel extends ListModelTableModel<TestObject, Column
 		case A_FIRST_VALUE:
 			return object.aFirstValue;
 		case A_SECOND_VALUE:
-			return new Integer(object.aSecondValue);
+			return Integer.valueOf(object.aSecondValue);
 		default:
 			throw new IllegalArgumentException("Unknown column " + column);
 		}
@@ -53,8 +53,9 @@ public class TestObjectTableModel extends ListModelTableModel<TestObject, Column
 		switch (column) {
 		case A_FIRST_VALUE:
 			object.aFirstValue = (String) value;
+			break;
 		case A_SECOND_VALUE:
-			return;
+			break;
 		default:
 			throw new IllegalArgumentException("Unknown column " + column);
 		}
